# cdpcurl

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  NOTICE.txt  PKG-INFO  README.md  ci.sh  pyproject.toml  setup.cfg  setup.py
.github/: release.yml
.github/workflows/: release.yml
cdpcurl/: __init__.py  __main__.py  _version.py  cdpconfig.py  cdpcurl.py  cdpv1sign.py  requests.py  requests_auth.py
cdpcurl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: load_cdp_config_test.py  stages_test.py  unit_test.py
tests/data/: credentials
